syntax = "proto3";

package transaction;

// import "google/api/annotations.proto";

message TransactionRequest {
    string id = 1;
}

message TransactionResponse {
    enum Type {
        INCOME = 0;
        EXPENSE = 1;
    }
    string id = 1;
    int64 created_at = 2;
    int64 updated_at = 3;
    string name = 4;
    float amount = 5;
    Type type = 6;
}


service Transaction {
    rpc GetTransaction (TransactionRequest) returns (TransactionResponse) {
        // option (google.api.http) = {
        //     get: "/v1/transactions"
        // };
    }
}